--- a/.env.development
+++ b/.env.development
@@ -5,6 +5,7 @@ ENV = 'development'
 VUE_APP_BASE_API = 'http://blog.nginx'
 
 VUE_APP_UPLOAD_ACTION = 'http://blog.nginx/web/upload'
+VUE_APP_UPLOAD_FILE_ACTION = 'http://blog.nginx/self_intro/upload'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
