--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,7 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'http://47.107.50.30'
-VUE_APP_BASE_API_UPLOAD = 'http://47.107.50.30/api/upload/image'
+VUE_APP_BASE_API = ''
+VUE_APP_BASE_API_UPLOAD = ''
+VUE_APP_UPLOAD_ACTION = ''
+VUE_APP_UPLOAD_FILE_ACTION = ''
